--- a/style.css
+++ b/style.css
@@ -15,44 +15,41 @@ ul {
 body {
   height: 100vh;
   font-size: 1.2rem;
-  display: flex;
   position: relative;
+  display: grid;
+  grid-template-columns: 2fr 3fr 10%;
+  grid-template-rows: 10% 1fr;
 }
+
+/* nav/menu logo  */
+
+nav {
+  grid-area: 1 / 3 / 2 / -1;
+  text-align: center;
+  align-items: center;
+}
+nav img {
+  width: 100px;
+  height: 100px;
+}
+
+/* section info  */
 
 .info-section {
   background: midnightblue;
   color: #f1f1f1;
-  width: 40%;
-  height: 100%;
-}
-
-.picture-of-me {
-  top: 5%;
-  position: absolute;
-  left: 30%;
-}
-
-.picture-of-me img {
-  width: 30vw;
-  height: 90vh;
-  box-shadow: 5px 10px 15px black;
-}
-
-.about-me {
-  position: absolute;
-  top: 20%;
-  right: 0;
-  width: 45%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-size: 1.4rem;
+  width: 100%;
+  height: 100vh;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 3fr 2fr;
 }
 
 .info {
-  position: absolute;
-  top: 60%;
-  left: 5%;
+  grid-area: 2 / 2 / -1 /-1;
 }
 
 .info p,
@@ -61,9 +58,9 @@ body {
 }
 
 ul {
-  display: flex;
-  flex-direction: row;
   list-style: none;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .my-logo {
@@ -76,10 +73,44 @@ ul {
   height: 25px;
 }
 
+/* section photo */
+
+.picture-of-me img {
+  width: 30vw;
+  height: 90vh;
+  box-shadow: 5px 10px 15px black;
+  top: 5%;
+  left: 30%;
+  position: absolute;
+}
+
+/* section presentation */
+
+.about-me {
+  right: 0;
+  width: 100%;
+  height: 70vh;
+  grid-column: 2 / -1;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 40% 1fr 150px;
+  grid-template-rows: 20% 1fr;
+}
+
+.describe-me {
+  text-align: left;
+  width: 100%;
+  padding-left: 30px;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
 .button-div {
-  display: flex;
-  flex-direction: row;
-  padding: 20px 50px 50px 50px;
+  grid-column: 2 /3;
+  grid-row: 3/ 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 button {
@@ -90,6 +121,9 @@ button {
   border: 0;
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+button:first-child {
 }
 
 button:hover {
@@ -109,12 +143,6 @@ button:active {
 
 .button-div button:nth-child(2) {
   border: 1px solid black;
-}
-
-.describe-me {
-  text-align: left;
-  width: 70%;
-  padding-left: 30px;
 }
 
 h1 {
