--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ ul {
 
 body {
   height: 100vh;
+  overflow: hidden;
   font-size: 1.2rem;
   position: relative;
   display: grid;
@@ -121,9 +122,6 @@ button {
   border: 0;
   font-weight: bold;
   font-size: 1.2rem;
-}
-
-button:first-child {
 }
 
 button:hover {
